--- a/CSharpFundementals/CSharpFundementals.csproj
+++ b/CSharpFundementals/CSharpFundementals.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Math\Calculator.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShippingMethod.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
